--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "clase11",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/davidJuncos/MercadoLiebre.git"
+  },
+  "bugs": {
+    "url": "https://github.com/davidJuncos/MercadoLiebre/issues"
+  },
+  "homepage": "https://github.com/davidJuncos/MercadoLiebre",
+  "description": ""
 }
